--- a/src/task-03.html
+++ b/src/task-03.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="../style.css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Задание 3</title>
+
     <style>
       body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
