--- a/src/task-06.html
+++ b/src/task-06.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="../style.css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Задание 6</title>
     <style>
